apps/canary-demo/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-demo
spec:
  selector:
    app: canary-demo
  ports:
    - name: http
      port: 80
      targetPort: http
